--- a/gazette_notice/mkdocs/mkdocs.yml
+++ b/gazette_notice/mkdocs/mkdocs.yml
@@ -1,15 +1,10 @@
 site_name: Dokumenty na úředních deskách
 pages:
     - Obsah: index.md
-    - Entita (Entity): entity.md
-    - Fyzická osoba (Person): person.md
-    - Geo souřadnice (Geocoordinates): geocoordinates.md
-    - Geoshape, geo tvar (Geoshape): geoshape.md
-    - Identifikátor (Identifier): identifier.md
-    - Jméno fyzické osoby (Person name): person_name.md
-    - Klasifikace (Classification): classification.md
-    - Místo (Place): place.md
-    - Organizace (Company): organisation.md
-    - Oznámení na úřední desce (Notice): gazette-notice-schema.md
-    - Poštovní adresa (Postal Address): postal_address.md
+    - Fyzická osoba: fyzickaOsoba.md
+    - Místo: misto.md
+    - Místo dle RÚIAN: ruian.md
+    - Organizace: organizace.md
+    - Oznámení na úřední desce: oznameni.md
+    - Subjekt oznámení: subjekt.md
 theme: readthedocs
